{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 10,
  "lineage": "8aaac362-0988-e6a1-b12d-e8681fd31288",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "source_sg_data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "BastionSeverSG",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:401448503579:security-group/sg-035bf9396d37a889e",
            "description": "Bastion-SG",
            "filter": null,
            "id": "sg-035bf9396d37a889e",
            "name": "BastionSeverSG",
            "region": "ap-northeast-2",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc8c284cdbf5306d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "managed_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "BastionServerSG",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:401448503579:security-group/sg-035bf9396d37a889e",
            "description": "Bastion-SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-035bf9396d37a889e",
            "ingress": [
              {
                "cidr_blocks": [
                  "119.193.188.105/32",
                  "1.233.148.83/32",
                  "118.219.170.105/32",
                  "118.130.199.189/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionSeverSG",
            "name_prefix": "",
            "owner_id": "401448503579",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": null,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0fc8c284cdbf5306d"
          },
          "sensitive_attributes": []
        },
        {
          "index_key": "BastionSeverSG",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:401448503579:security-group/sg-06bb0301b01b4c880",
            "description": "Managed by Hybrid Firewall System",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06bb0301b01b4c880",
            "ingress": [
              {
                "cidr_blocks": [
                  "211.211.211.211/32"
                ],
                "description": "Allow SSH from On-premise Office",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "BastionSeverSG",
            "name_prefix": "",
            "owner_id": "401448503579",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "BastionSeverSG"
            },
            "tags_all": {
              "Name": "BastionSeverSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-00821ffe3dbb74e71"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.source_sg_data"
          ]
        },
        {
          "index_key": "FTPServerSG",
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "Managed by Hybrid Firewall System",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05723c3d9a3368cd8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow FTP Control from Bastion",
                "from_port": 21,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035bf9396d37a889e"
                ],
                "self": false,
                "to_port": 21
              },
              {
                "cidr_blocks": [],
                "description": "Allow FTP Passive Data from Bastion",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-035bf9396d37a889e"
                ],
                "self": false,
                "to_port": 30009
              }
            ],
            "name": "FTPServerSG",
            "name_prefix": null,
            "owner_id": null,
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FTPServerSG"
            },
            "tags_all": {
              "Name": "FTPServerSG"
            },
            "timeouts": null,
            "vpc_id": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_group.source_sg_data"
          ]
        }
      ]
    }
  ]
}